Switch to JSpecify for nullability annotations